Deployment/Jenkins-Agent-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-agent
spec:
  selector:
    app: jenkins
  ports:
  - name: slavelistener
    port: 50000
    targetPort: 50000
    protocol: TCP
