Deployment/Jenkins-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  selector:
    app: jenkins
  ports:
  - name: slavelistener
    port: 8080
    targetPort: 8080
    protocol: TCP
