Deployment/Jenkins-Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  rules:
  - host: YOUR_HOST_NAME_HERE
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
